--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -41,6 +41,13 @@
                 android:layout_width="40dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_height="40dp" />
+            <TextView
+                android:id="@+id/ae_more"
+                android:drawableRight="@drawable/ic_more"
+                android:paddingHorizontal="8dp"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
         </LinearLayout>
         <TextView
             android:id="@+id/ae_address"
@@ -54,12 +61,17 @@
             android:singleLine="true" />
     </LinearLayout>
 
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:id="@+id/ae_swipe"
+    android:layout_below="@id/ae_linear_layout_top"
+    android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ae_recycler"
-        android:layout_below="@id/ae_linear_layout_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
